updated ignore and index page

--- a/FullStackToAzure/Pages/Index.razor
+++ b/FullStackToAzure/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello, Full STACK TO AZURE!</h1>
 
-Welcome to your new app.
+Welcome to your Full Stack to Azure new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
