--- a/FullStackToAzure/Pages/VehicleOverview.razor
+++ b/FullStackToAzure/Pages/VehicleOverview.razor
@@ -1,6 +1,6 @@
 ﻿@page "/vehicleoverview"
 
-<h3>VehicleOverview - FullSTack</h3>
+<h3>VehicleOverview - FullSTack - Trigger Deploy</h3>
 
 @code {
 
