--- a/FullStackToAzure/Shared/NavMenu.razor
+++ b/FullStackToAzure/Shared/NavMenu.razor
@@ -22,11 +22,15 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="vehicleoverview">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Vehicle Overview
-            </NavLink>
-        </li>
+        <AuthorizeView>
+            <Authorized>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="vehicleoverview">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Vehicle Overview
+                    </NavLink>
+                </li>
+            </Authorized>
+        </AuthorizeView>
     </ul>
 </div>
 
@@ -39,4 +43,5 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
 }
